Added todos and cosmetic changes